--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 			<!-- 个人信息 -->
 			<div class="info">
 				<img src="img/touxiang.gif" alt="个人照片">
-				<p>王 磊</p>
+				<p>张宇欣</p>
 				<span>WEB Design</span>
 			</div>
 			<!-- 毕业院校 -->
 			<div class="graduation">
-				<i class="biye"></i><span>:&nbsp;内蒙古包头轻工职业技术学院</span>
+				<i class="biye"></i><span>:&nbsp;岭南大学</span>
 				<b class="information"></b>
 				<div class="phone">
 					<i class="icon1"></i><span>15810793102</span>
