--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="content container">
 			<!-- 个人信息 -->
 			<div class="info">
-				<img src="img/touxiang.gif" alt="个人照片">
+				<img src="666.jpg" alt="个人照片">
 				<p>张宇欣</p>
 				<span>WEB Design</span>
 			</div>
