--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 				<i class="biye"></i><span>:&nbsp;岭南大学</span>
 				<b class="information"></b>
 				<div class="phone">
-					<i class="icon1"></i><span>15810793102</span>
-					<i class="icon2"></i><span>wanglei091105@163.com</span>
+					<i class="icon1"></i><span>6666666</span>
+					<i class="icon2"></i><span>Zhangyuxin091105@163.com</span>
 					<i class="icon3"></i><span>409610466</span>
 				</div>
 			</div>
