--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 			<!-- 自我介绍 -->
 			<div class="self">
 				<i></i>
-				<p>因为对电脑强烈的兴趣，有2年的前端开发经验</p>
-				<p>能够熟练使用PS，FW，Sublime，WebStorm等软件进行开发</p>
-				<p>根据psd图实现网页一些效果和后端一起实现一些特效 </p>
+				<p>对计算机有着强烈的兴趣</p>
+				<p>能熟练地掌握办公软件</p>
+				<p>工作积极热情 </p>
 				<p>有自主解决处理问题的能力，积极配合团队完成项目</p>
 			</div>
 			<div class="null">
